--- a/notifier.conf
+++ b/notifier.conf
@@ -5,3 +5,6 @@ eosdatadir=/opt/EOSmainNet
 checker=/opt/BP-block-producing-notifier/check_blacklist_bot.sh
 chatid=111111111
 botkey=222222222:AAFGzXt5kTy111111-51s1111111j_11111
+nodeosbindir=/home/eos-sources/eos/build/programs/cleos
+nodehost=1.1.1.1:8888
+wallethost=127.0.0.1:3000
